# yt-dlp_GUI

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  test2.py  yt-dlp_GUI.py
.github/workflows/: nuitka-build.yml  python-app.yml
app/: __init__.py  format_info.json  launcher.py  yt-dlp_GUI.py  yt-dlp_test.py
app/core/: check_info.py  command.py  database.py  download.py  functions.py  helper_functions.py
app/core/models/: database.py
app/core/ui/: customized_class.py  main_window.py  subwindow.py
app/core/utils/: helper_functions.py
app/ui/resources/stylesheets/: style.css
app/utils/: _utils.py  utils.py
config/: config.ini  config.toml
docs/: yt-dlp命令_zh.md  yt-dlp格式选择.md  yt-dlp格式选择_zh.md  yt-dlp输出模板.md  yt-dlp输出模板_zh.md  嵌入yt-dlp_zh.md
test/: format_info.json  format_list.md  info.json  yt-dlp_test.py  yt-dlp_test2.py
yt_dlp_gui/app/: yt-dlp_GUI.py
