[tool.poetry]
name = "yt-dlp-gui"
version = "0.1.0"
description = "virtualenvs.create=true"
authors = ["sltlala <sltlala@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
pyside6 = "^6.6.2"
nuitka = "^2.0.3"
yt-dlp = "^2023.12.30"
pre-commit = "^3.6.2"
ruff = "^0.2.2"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "secondary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401"]
