[tool.poetry]
name = "yt-dlp-gui"
version = "0.1.0"
description = "virtualenvs.create=true"
authors = ["sltlala <sltlala@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyside6 = "^6.6.2"
nuitka = "^2.0.3"
yt-dlp = "^2023.12.30"
pre-commit = "^3.6.2"
ruff = "^0.2.2"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "secondary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
docstring-code-format = true
