[tool.poetry]
name = "yt-dlp-gui"
version = "0.1.0"
description = "virtualenvs.create=true"
authors = ["sltlala <sltlala@163.com>"]
readme = "README.md"
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
PySide6 = "<=6.4.2"
nuitka = "^2.0.3"
yt-dlp = "^2024.3.2.232720.dev0"
pre-commit = "^3.6.2"
ruff = "^0.3.0"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "secondary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 100.
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["F401"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
# unfixable = ["B"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
docstring-code-format = true
